fix(storypage): Adding spacing to storypage content (#1107)
* fix(spacing): add story page proper spacing

* refactor(section): extract header part to separate component

* Margins according to specs

* Add section title margin

--- a/packages/wix-storybook-utils/src/LiveCodeExample/index.scss
+++ b/packages/wix-storybook-utils/src/LiveCodeExample/index.scss
@@ -3,7 +3,6 @@
 
 .wrapper {
   min-width: 894px;
-  max-width: 1254px;
 
   margin-bottom: 20px;
   border: 1px solid #dfe5eb;
