--- a/packages/wix-storybook-utils/src/Sections/styles.scss
+++ b/packages/wix-storybook-utils/src/Sections/styles.scss
@@ -1,14 +1,29 @@
 @import '../ui/typography.scss';
 
+.page {
+  margin: 0 48px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.content {
+  margin: 30px 0;
+  width: 1161px;
+}
+
+.header {
+   margin-bottom: 30px;
+}
+
 .title {
-  margin-top: 30px;
   font-size: 36px;
   line-height: 1.33;
   color: #162d3d;
 }
 
 .subtitle {
-  margin-bottom: 10px;
   @include font(medium);
   font-size: 16px;
   line-height: 1.5;
@@ -28,4 +43,9 @@
 .section-title {
   @include font(roman);
   font-size: 20px;
+  margin-bottom: 30px;
+}
+
+.tab {
+  margin-bottom: 30px;
 }
