--- a/packages/wix-storybook-utils/src/Sections/views/styles.scss
+++ b/packages/wix-storybook-utils/src/Sections/views/styles.scss
@@ -1,7 +1,7 @@
 @import '../../ui/typography.scss';
 
 .description {
-  margin: 24px 0 18px 0;
+  margin-bottom: 24px;
   @include font(light);
   font-size: 16px;
   font-weight: 300;
